--- a/serviceDesk_client/src/main/resources/views/DeveloperCompendiumScreen.fxml
+++ b/serviceDesk_client/src/main/resources/views/DeveloperCompendiumScreen.fxml
@@ -142,7 +142,7 @@
                                  <children>
                                     <AnchorPane prefHeight="60.0" prefWidth="200.0">
                                        <children>
-                                          <Button fx:id="addCompModSoftButton" layoutX="70.0" layoutY="10.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="250.0" styleClass="add-compendiums-button" text="+ Добавить модуль ПО" />
+                                          <Button fx:id="addModSoftButton" layoutX="70.0" layoutY="10.0" mnemonicParsing="false" onAction="#AddModSoftButtonClicked" prefHeight="40.0" prefWidth="250.0" styleClass="add-compendiums-button" text="+ Добавить модуль ПО" />
                                        </children></AnchorPane>
                                     <AnchorPane prefHeight="430.0" prefWidth="1244.0">
                                        <children>
