--- a/serviceDesk_client/src/main/resources/views/CreateOwnerScreen.fxml
+++ b/serviceDesk_client/src/main/resources/views/CreateOwnerScreen.fxml
@@ -1,14 +1,64 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.shape.Line?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="$CONTROLLER_NAME$"
-            prefHeight="400.0" prefWidth="600.0" >
-
-</AnchorPane>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="680.0" prefWidth="840.0" styleClass="main-pane" stylesheets="@MainStylesheet.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="team.dna2.serviceDesk_client.controllers.CreateOwnerScreenController">
+    <top>
+        <AnchorPane prefHeight="80.0" prefWidth="840.0" BorderPane.alignment="CENTER">
+            <children>
+                <Text layoutX="282.0" layoutY="49.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="title-text" text="Создание организации" textAlignment="CENTER" />
+            </children>
+        </AnchorPane>
+    </top>
+    <bottom>
+        <Button fx:id="CreateOwnerButton" defaultButton="true" mnemonicParsing="false" onAction="#CreateOwnerButtonClicked" prefHeight="50.0" prefWidth="200.0" styleClass="main-button" text="Создать организацию" BorderPane.alignment="CENTER">
+            <opaqueInsets>
+                <Insets />
+            </opaqueInsets>
+            <font>
+                <Font size="20.0" />
+            </font>
+            <BorderPane.margin>
+                <Insets bottom="20.0" />
+            </BorderPane.margin>
+        </Button>
+    </bottom>
+    <left>
+        <AnchorPane prefHeight="458.0" prefWidth="80.0" BorderPane.alignment="CENTER">
+            <children>
+                <Label layoutX="9.0" layoutY="14.0" onMouseClicked="#PreviousScreenButtonClicked" prefHeight="94.0" prefWidth="71.0" styleClass="previous-screen-button" text="&lt;" />
+            </children>
+        </AnchorPane>
+    </left>
+    <center>
+        <AnchorPane prefHeight="494.0" prefWidth="679.0" BorderPane.alignment="CENTER">
+            <children>
+                <Label layoutX="60.0" layoutY="40.0" styleClass="big-description-text" text="Название*" />
+                <Label layoutX="60.0" layoutY="123.0" style="-fx-font-weight: bold;" styleClass="big-description-text" text="Владелец ЛК" />
+                <TextField fx:id="OwnerNameField" layoutX="60.0" layoutY="70.0" prefHeight="35.0" prefWidth="600.0" promptText="Не менее 10 символов" styleClass="create-object-TextField" />
+            <Label layoutX="60.0" layoutY="160.0" styleClass="big-description-text" text="Email*" />
+            <Label layoutX="60.0" layoutY="230.0" styleClass="big-description-text" text="Фамилия*" />
+            <Label layoutX="60.0" layoutY="300.0" styleClass="big-description-text" text="Имя*" />
+            <Label layoutX="60.0" layoutY="370.0" styleClass="big-description-text" text="Пароль*" />
+            <Label layoutX="60.0" layoutY="440.0" styleClass="big-description-text" text="Повторите пароль*" />
+            <TextField fx:id="OwnerEmailField" layoutX="60.0" layoutY="185.0" maxWidth="600.0" minWidth="600.0" prefWidth="600.0" styleClass="create-object-TextField" />
+            <TextField fx:id="OwnerSNameField" layoutX="60.0" layoutY="255.0" maxWidth="600.0" minWidth="600.0" prefWidth="600.0" styleClass="create-object-TextField" />
+            <TextField fx:id="OwnerFNameField" layoutX="60.0" layoutY="325.0" maxWidth="600.0" minWidth="600.0" prefWidth="600.0" styleClass="create-object-TextField" />
+            <TextField fx:id="OwnerPasswordField" layoutX="60.0" layoutY="395.0" maxWidth="600.0" minWidth="600.0" prefWidth="600.0" styleClass="create-object-TextField" />
+            <TextField fx:id="OwnerRPasswordField" layoutX="60.0" layoutY="465.0" maxWidth="600.0" minWidth="600.0" prefWidth="600.0" styleClass="create-object-TextField" />
+            <Line endX="497.60003662109375" endY="-1.52587890625E-5" layoutX="160.0" layoutY="150.0" startX="-100.00001525878906" startY="0.1999969482421875" strokeLineCap="ROUND" strokeWidth="3.0" style="-fx-stroke: #7D2E7F;" />
+            </children>
+        </AnchorPane>
+    </center>
+    <right>
+        <AnchorPane prefHeight="530.0" prefWidth="80.0" BorderPane.alignment="CENTER" />
+    </right>
+</BorderPane>
