--- a/serviceDesk_client/src/main/resources/views/DeveloperCompendiumScreen.fxml
+++ b/serviceDesk_client/src/main/resources/views/DeveloperCompendiumScreen.fxml
@@ -165,7 +165,7 @@
                                  <children>
                                     <AnchorPane prefHeight="60.0" prefWidth="200.0">
                                        <children>
-                                          <Button fx:id="addOwnerButton" layoutX="70.0" layoutY="10.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="250.0" styleClass="add-compendiums-button" text="+ Добавить заказчика" />
+                                          <Button fx:id="addOwnerButton" layoutX="70.0" layoutY="10.0" mnemonicParsing="false" onAction="#AddOwnerButtonClicked" prefHeight="40.0" prefWidth="250.0" styleClass="add-compendiums-button" text="+ Добавить заказчика" />
                                        </children></AnchorPane>
                                     <AnchorPane prefHeight="430.0" prefWidth="1244.0">
                                        <children>
