--- a/serviceDesk_client/src/main/resources/views/CreateTicketCategoryScreen.fxml
+++ b/serviceDesk_client/src/main/resources/views/CreateTicketCategoryScreen.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="680.0" prefWidth="840.0" styleClass="main-pane" stylesheets="@MainStylesheet.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="team.dna2.serviceDesk_client.controllers.CreateTypeScreenController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="680.0" prefWidth="840.0" styleClass="main-pane" stylesheets="@MainStylesheet.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="team.dna2.serviceDesk_client.controllers.CreateTicketCategoryScreenController">
     <top>
         <AnchorPane prefHeight="80.0" prefWidth="840.0" BorderPane.alignment="CENTER">
             <children>
@@ -19,7 +19,7 @@
         </AnchorPane>
     </top>
     <bottom>
-        <Button fx:id="CreateTypeButton" defaultButton="true" mnemonicParsing="false" onAction="#CreateTypeButtonClicked" prefHeight="50.0" prefWidth="200.0" styleClass="main-button" text="Создать тип обращения" BorderPane.alignment="CENTER">
+        <Button fx:id="CreateTicketCategoryButton" defaultButton="true" mnemonicParsing="false" onAction="#CreateTicketCategoryButtonClicked" prefHeight="50.0" prefWidth="200.0" styleClass="main-button" text="Создать тип обращения" BorderPane.alignment="CENTER">
             <opaqueInsets>
                 <Insets />
             </opaqueInsets>
