--- a/serviceDesk_client/src/main/resources/views/MemberOrganisationScreen.fxml
+++ b/serviceDesk_client/src/main/resources/views/MemberOrganisationScreen.fxml
@@ -1,11 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Point3D?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Circle?>
+<?import javafx.scene.shape.Line?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
@@ -18,12 +28,7 @@
                   <Font name="System Bold Italic" size="36.0" />
                </font>
             </Text>
-            <Text fx:id="Tickets" fill="WHITE" onMouseClicked="#TicketsClicked" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="navigation-menu-text" text="Обращения" textAlignment="CENTER" wrappingWidth="200.0">
-               <font>
-                  <Font size="36.0" />
-               </font>
-            </Text>
-            <AnchorPane prefHeight="64.0" prefWidth="579.0" />
+            <AnchorPane prefHeight="64.0" prefWidth="730.0" />
             <HBox alignment="BASELINE_RIGHT" maxHeight="64.0" maxWidth="400.0" nodeOrientation="RIGHT_TO_LEFT" prefHeight="64.0" prefWidth="400.0" HBox.hgrow="NEVER">
                <children>
                   <AnchorPane maxHeight="64.0" maxWidth="200.0" minHeight="64.0" minWidth="200.0" prefHeight="64.0" prefWidth="200.0" HBox.hgrow="NEVER">
@@ -45,8 +50,163 @@
    <center>
       <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
-            <AnchorPane prefHeight="200.0" prefWidth="200.0" />
-            <AnchorPane prefHeight="488.0" prefWidth="1243.0" />
+            <AnchorPane prefHeight="200.0" prefWidth="1178.0">
+               <children>
+                  <Label layoutX="42.0" layoutY="23.0" styleClass="title-text" text="Профиль оргаризации" />
+                  <Line endX="-1.6" endY="1.5" layoutX="171.0" layoutY="59.0" startX="-126.0" startY="1.5" stroke="#7d2e7e" strokeLineCap="ROUND" strokeWidth="5.0" />
+               </children></AnchorPane>
+            <AnchorPane prefHeight="730.0" prefWidth="1178.0">
+               <children>
+                  <TabPane fx:id="OrganizationTabPane" layoutX="15.0" layoutY="20.0" prefHeight="551.0" prefWidth="1163.0" tabClosingPolicy="UNAVAILABLE">
+                    <tabs>
+                      <Tab fx:id="OrganizationInfoTab" styleClass="owner-tab" text="Информация об организации">
+                           <content>
+                              <VBox prefHeight="200.0" prefWidth="100.0">
+                                 <children>
+                                    <AnchorPane prefHeight="194.0" prefWidth="1157.0">
+                                       <children>
+                                          <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="150.0" layoutX="30.0" layoutY="30.0" stroke="#7d2e7e" strokeLineCap="ROUND" strokeWidth="3.0" width="150.0" />
+                                          <ImageView fx:id="OrganizationAvatar" fitHeight="145.0" fitWidth="145.0" layoutX="32.0" layoutY="33.0" pickOnBounds="true" preserveRatio="true" />
+                                          <Label fx:id="OrganizationName" layoutX="240.0" layoutY="30.0" text="ООО КРОВОСТОК" textFill="#00d29d">
+                                             <font>
+                                                <Font name="System Bold" size="24.0" />
+                                             </font>
+                                          </Label>
+                                          <Label layoutX="240.0" layoutY="80.0" text="Название организации">
+                                             <font>
+                                                <Font size="16.0" />
+                                             </font>
+                                          </Label>
+                                          <Line endX="81.333251953125" endY="1.5" layoutX="363.0" layoutY="64.0" startX="-122.99995422363281" startY="1.199981689453125" stroke="#7d2e7e" strokeLineCap="ROUND" strokeWidth="3.0" />
+                                       </children>
+                                    </AnchorPane>
+                                    <AnchorPane prefHeight="295.0" prefWidth="1157.0">
+                                       <children>
+                                          <Label layoutX="50.0" layoutY="30.0" text="Владелец личного кабинета">
+                                             <font>
+                                                <Font size="16.0" />
+                                             </font>
+                                          </Label>
+                                          <Label fx:id="OwnerFName" layoutX="150.0" layoutY="70.0" text="Имя владельца ЛК">
+                                             <font>
+                                                <Font size="16.0" />
+                                             </font>
+                                          </Label>
+                                          <Label fx:id="OwnerSName" layoutX="150.0" layoutY="100.0" text="Фамилия владельца ЛК">
+                                             <font>
+                                                <Font size="16.0" />
+                                             </font>
+                                          </Label>
+                                          <Label layoutX="50.0" layoutY="150.0" text="Дата регистрации:">
+                                             <font>
+                                                <Font size="16.0" />
+                                             </font>
+                                          </Label>
+                                          <Label fx:id="OrganizationRegDate" layoutX="200.0" layoutY="150.0" text="00.00.00">
+                                             <font>
+                                                <Font size="16.0" />
+                                             </font>
+                                          </Label>
+                                          <Label layoutX="50.0" layoutY="190.0" text="Дата блокировки:">
+                                             <font>
+                                                <Font size="16.0" />
+                                             </font>
+                                          </Label>
+                                          <Label fx:id="OrganizationBlockDate" layoutX="200.0" layoutY="190.0" text="00.00.00">
+                                             <font>
+                                                <Font size="16.0" />
+                                             </font>
+                                          </Label>
+                                          <Label layoutX="50.0" layoutY="230.0" text="Статус" textFill="#00d29d">
+                                             <font>
+                                                <Font name="System Bold" size="16.0" />
+                                             </font>
+                                          </Label>
+                                          <Label fx:id="OrganizationStatus" layoutX="200.0" layoutY="230.0" text="Активен">
+                                             <font>
+                                                <Font size="16.0" />
+                                             </font>
+                                          </Label>
+                                          <Label layoutX="400.0" layoutY="30.0" text="Описание">
+                                             <font>
+                                                <Font size="16.0" />
+                                             </font>
+                                          </Label>
+                                          <Button fx:id="OrganizationChangeButton" layoutX="500.0" layoutY="30.0" mnemonicParsing="false" onAction="#OrganizationChangeButtonClick" prefHeight="20.0" prefWidth="120.0" styleClass="change-button" text="Изменить">
+                                             <font>
+                                                <Font size="14.0" />
+                                             </font>
+                                          </Button>
+                                          <ImageView fx:id="OwnerAvatar" fitHeight="80.0" fitWidth="80.0" layoutX="52.0" layoutY="64.0" pickOnBounds="true" preserveRatio="true" />
+                                          <Line endX="81.333251953125" endY="1.5" layoutX="175.0" layoutY="55.0" startX="-122.99995422363281" startY="1.199981689453125" stroke="#7d2e7e" strokeLineCap="ROUND" strokeWidth="2.0" />
+                                          <Line endX="-51.39996337890625" endY="0.5999832153320312" layoutX="525.0" layoutY="55.0" startX="-122.99995422363281" startY="1.199981689453125" stroke="#7d2e7e" strokeLineCap="ROUND" strokeWidth="2.0">
+                                             <rotationAxis>
+                                                <Point3D />
+                                             </rotationAxis>
+                                          </Line>
+                                          <Line endX="81.333251953125" endY="1.5" layoutX="175.0" layoutY="175.0" startX="-122.99995422363281" startY="1.199981689453125" stroke="#7d2e7e" strokeLineCap="ROUND" strokeWidth="2.0" />
+                                          <Line endX="81.333251953125" endY="1.5" layoutX="175.0" layoutY="215.0" startX="-122.99995422363281" startY="1.199981689453125" stroke="#7d2e7e" strokeLineCap="ROUND" strokeWidth="2.0" />
+                                          <Line endX="81.333251953125" endY="1.5" layoutX="175.0" layoutY="255.0" startX="-122.99995422363281" startY="1.199981689453125" stroke="#7d2e7e" strokeLineCap="ROUND" strokeWidth="2.0" />
+                                          <TextArea layoutX="400.0" layoutY="70.0" prefHeight="200.0" prefWidth="700.0" text="Я родился в Москве в 70-м на краю города&#10;Моча рано ударила в голову&#10;В 4 активно ругался матом; в детском саду&#10;Девочки впервые показали мне пизду">
+                                             <font>
+                                                <Font size="16.0" />
+                                             </font>
+                                          </TextArea>
+                                       </children>
+                                    </AnchorPane>
+                                 </children>
+                              </VBox>
+                           </content>
+                      </Tab>
+                      <Tab fx:id="OrganizationMemberListTab" styleClass="owner-tab" text="Список представителей заказчика">
+                           <content>
+                              <VBox prefHeight="200.0" prefWidth="100.0">
+                                 <children>
+                                    <AnchorPane prefHeight="60.0" prefWidth="1157.0">
+                                       <children>
+                                          <Button fx:id="AddMemberButton" layoutX="70.0" layoutY="10.0" mnemonicParsing="false" onAction="#AddMemberButtonClick" styleClass="add-compendiums-button" text="+ Добавить представителя" />
+                                       </children>
+                                    </AnchorPane>
+                                    <AnchorPane prefHeight="433.0" prefWidth="1157.0">
+                                       <children>
+                                          <TableView fx:id="MembersTable" layoutX="42.0" maxHeight="420.0" maxWidth="1100.0" minHeight="420.0" minWidth="1100.0" prefHeight="420.0" prefWidth="1100.0">
+                                             <columns>
+                                                <TableColumn fx:id="MemberId" maxWidth="35.0" minWidth="35.0" prefWidth="35.0" text="ID" />
+                                                <TableColumn fx:id="MemberAvatar" maxWidth="150.0" minWidth="150.0" prefWidth="150.0" text="Фото представителя" />
+                                                <TableColumn fx:id="MemberName" maxWidth="510.9333038330078" minWidth="391.7333221435547" prefWidth="405.60003662109375" text="ФИО" />
+                                                <TableColumn fx:id="MemberRegDate" maxWidth="200.0" minWidth="200.0" prefWidth="200.0" text="Дата регистрации" />
+                                                <TableColumn fx:id="MemberStatus" maxWidth="120.0" minWidth="120.0" prefWidth="120.0" text="Статус" />
+                                                <TableColumn fx:id="MemberBlockDate" maxWidth="200.0" minWidth="200.0" prefWidth="200.0" text="Дата блокировки" />
+                                             </columns>
+                                          </TableView>
+                                       </children>
+                                    </AnchorPane>
+                                 </children>
+                              </VBox>
+                           </content>
+                      </Tab>
+                        <Tab fx:id="OrganizationLicenseListTab" styleClass="owner-tab" text="Список лицензий">
+                          <content>
+                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                 <children>
+                                    <TableView fx:id="LicenseTable" layoutX="16.0" layoutY="21.0" maxHeight="450.0" maxWidth="1100.0" minHeight="450.0" minWidth="1100.0" prefHeight="450.0" prefWidth="1100.0">
+                                      <columns>
+                                        <TableColumn fx:id="LicenseID" maxWidth="35.0" minWidth="35.0" prefWidth="35.0" text="ID" />
+                                        <TableColumn fx:id="LicenseSerialNumber" maxWidth="180.0" minWidth="180.0" prefWidth="180.0" text="Серийный номер" />
+                                         <TableColumn fx:id="LicenseOrganization" maxWidth="180.0" minWidth="180.0" prefWidth="180.0" text="Организация" />
+                                         <TableColumn fx:id="LicenseSoftware" maxWidth="150.0" minWidth="150.0" prefWidth="150.0" text="ПО" />
+                                         <TableColumn fx:id="LicenseMemberSize" maxWidth="200.0" minWidth="200.0" prefWidth="200.0" text="Количество мест" />
+                                         <TableColumn fx:id="LicenseStartDate" maxWidth="180.0" minWidth="180.0" prefWidth="180.0" text="Дата начала" />
+                                         <TableColumn fx:id="LicenseEndDate" maxWidth="180.0" minWidth="180.0" prefWidth="180.0" text="Дата окончания" />
+                                         
+                                      </columns>
+                                    </TableView>
+                                 </children></AnchorPane>
+                          </content>
+                        </Tab>
+                    </tabs>
+                  </TabPane>
+               </children></AnchorPane>
          </children>
       </VBox>
    </center>
